<resources>
    <string name="app_name">Sprint Jobs</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="sprint_jobs">SPRINT JOBS</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sprintjobsicon">TODO</string>
    <string name="icon">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Already have a account?LOGIN</string>
    <string name="guestlogin">LOGIN as a guest.</string>
    <string name="Dont_have">Create a new account,SIGNUP</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forget_password">Forget Password?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
