<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prgrsbrsignup"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/sprint_job_icon"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/usernamesignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/passwordsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_lock"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/textforget"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/usernamesignup"
        android:layout_alignLeft="@+id/usernamesignup"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="177dp"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:fontFamily="sans-serif-smallcaps" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/colorPrimary" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/signup"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textViewsignup"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/register_here"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:fontFamily="sans-serif-smallcaps" />

    <TextView
        android:id="@+id/textguest2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/guestlogin"
        android:textAllCaps="false"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:fontFamily="sans-serif-smallcaps" />

</RelativeLayout>